# hsa-lang-multi-agents

./: .gitignore  README.md  debug_main.py  pyproject.toml  requirements.txt  test_imports.py
docs/: tax implications-matrix.mmd  user_guide.md
docs/agents/: agent-communication-pattern.md  agent-data-dependency.md  agent-state-mgmt.mmd  agent-workflow-sequence.mmd  agents.md  compliance_agent.md  component-interaction.mmd  contribution_agent.md  data-flow.mmd  data-transformation-flow.mmd  detailed-agent-processing.mmd  distribution_agent.md  error-handling.mmd  message-flow.mmd  sequenceDiagram.mmd  state-data-flow.mmd  state-flow.mmd  tax-decision-tree graph TD.mmd
docs/api/: endpoints.md
docs/architecture/: agent_flow_diagram.md  data_flow_diagram.md  system_overview.md
docs/rules/: irs_rules_summary.md
src/: main.py
src/agents/: __init__.py  base_agent.py  compliance_agent.py  contribution_agent.py  distribution_agent.py  eligibility_agent.py
src/graph/: __init__.py  hsa_state.py  hsa_workflow.py  state_models.py
src/utils/: __init__.py  irs_rules.py  validation.py
tests/: test_agents.py  test_utils.py  test_workflow.py
